# foff-milter

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGES.md  COMBINATION_CRITERIA.md  CONFIG-STRUCTURE.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOMAIN_AGE.md  DOMAIN_AGE_IMPLEMENTATION.md  FALSE_POSITIVE_ANALYSIS.md  FREEBSD_INSTALL.md  HOTEL-DEPLOYMENT.md  INVESTIGATION_SUMMARY.md  LICENSE  MILTER_BUG_INVESTIGATION.md  MILTER_TEST_PLAN.md  PROD_FINAL_REPORT.md  PROD_INVESTIGATION_FINDINGS.md  PROD_VS_TEST_ANALYSIS.md  README.md  REFACTOR-SHARED-PARSER.md  REFACTORING_PLAN.md  REGEX_LIMITATIONS.md  SUMMARY.md  THEORY_OF_OPERATION.md  TODO_FEATURE_MIGRATION.md  TODO_SIMPLIFICATION.md  UPGRADE.md  USAGE.md  analyze-logs.sh  analyze_test_failure.sh  analyze_timeout_issue.sh  anonymize_email.py  anonymize_emails.sh  build  (+134 more)
.cargo/: audit.toml  config.toml
anonymized_false_positives/: Your payment has been received.eml  ⏰ Uh-oh! Free delivery ends tomorrow, 12 1!.eml  🏁 LAST CALL for Black Friday savings.eml
config/: brand-patterns.toml  feature_scoring.yaml  foff-milter-production.toml  infrastructure.toml  phishing-detection.toml  scoring-matrix.toml
configs/: adult-content.yaml  advanced-security.yaml  analytics.yaml  brand-impersonation.yaml  ecommerce-scams.yaml  financial-services.yaml  health-spam.yaml  integration.yaml  machine-learning.yaml  multi-language.yaml  performance.yaml  phishing-scams.yaml  suspicious-domains.yaml  technology-scams.yaml
examples/: aaa-car-kit-scam-rules.yaml  attachment-only-detection.yaml  bulk-spam-detection.yaml  combination-criteria.yaml  comprehensive-config.yaml  docusign-abuse-example.yaml  domain-age-example.yaml  email-service-abuse-example.yaml  empty-content-detection.yaml  foff-milter.rc  free-email-reply-to-detection.yaml  freebsd-config.yaml  freebsd-sendmail.mc  google-groups-282548616536-block.yaml  google-groups-abuse-example.yaml  google-groups-unsubscribe-example.yaml  image-only-detection.yaml  invalid-unsubscribe-headers.yaml  ip-address-unsubscribe-detection.yaml  mailto-unsubscribe-example.yaml  netflix-phishing-detection.yaml  phishing-detection.yaml  postfix-main.cf  production-examples.yaml  production-psybook-filter.yaml  rar-attachment-detection.yaml  reply-to-validation.yaml  rule-tracking-example.yaml  sender-spoofing-extortion-example.yaml  sendgrid-abuse-reporting.yaml  sendgrid-phishing-detection.yaml  sendmail.mc  signnow-whitelist-example.yaml  simple-admin-phishing-detection.yaml  smtp-abuse-reporting.yaml  sparkmail-japanese.yaml  test-phishing.yaml  unsubscribe-pattern-example.yaml  unsubscribe-validation.yaml  video-spam-detection.yaml  (+2 more)
features/: brand_patterns.toml  brand_patterns.yaml  brands.toml  bulk_email_services.toml  domain_reputation.toml  feature_scoring.toml  legitimate_domains.toml  legitimate_domains.yaml  payment_processors.toml  scoring.toml  system_blocklist.toml
modules/: adult-content.yaml  advanced-heuristics.yaml  advanced-security.yaml  analytics.yaml  brand-domain-validation.yaml  brand-impersonation.yaml  commerce-threats.yaml  domain-risk-assessment.yaml  ecommerce-scams.yaml  email-infrastructure.yaml  financial-services.yaml  generic-brand-impersonation.yaml  health-spam.yaml  health-threats.yaml  integration.yaml  (+15 more)
(+795 files in other folders)
