[package]
name = "foff-milter"
version = "0.8.6"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
base64 = "0.22"
urlencoding = "2.1"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.9"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.5"
libc = "0.2"
reqwest = "0.12"
thiserror = "1.0"
url = "2.5"
hickory-resolver = "0.24"
indymilter = "0.3"
pdf-extract = "0.7"
tesseract-rs = { path = "tesseract-rs", features = ["embed-tessdata"], optional = true }
image = { version = "0.25", optional = true }
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
syslog = "7.0"
tokio = { version = "1.48", features = ["full"] }
lazy_static = "1.5"
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
rar = { path = "rar", optional = true }
zip = "0.6"

[features]
default = ["rar"]
ocr = ["tesseract-rs", "image"]

[lib]
name = "foff_milter"
path = "src/lib.rs"

[[bin]]
name = "foff-milter"
path = "src/main.rs"
