[package]
name = "foff-milter"
version = "0.8.76"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
base64 = "0.22"
urlencoding = "2.1"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10.4"
toml = "1.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.5"
quoted_printable = "0.5"
libc = "0.2"
reqwest = { version = "0.13", features = ["form"] }
thiserror = "2.0"
url = "2.5"
hickory-resolver = "0.25"
indymilter = "0.3"
pdf-extract = "0.10"
tesseract-rs = { path = "tesseract-rs", features = ["embed-tessdata"], optional = true }
image = { version = "0.25", optional = true }
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
syslog = "7.0"
tokio = { version = "1.48", features = ["full"] }
lazy_static = "1.5"
rand = "0.10"
rusqlite = { version = "0.39", features = ["bundled"] }
rar = { path = "rar", optional = true }
zip = "8.5"

[features]
default = ["rar"]
ocr = ["tesseract-rs", "image"]

[lib]
name = "foff_milter"
path = "src/lib.rs"

[[bin]]
name = "foff-milter"
path = "src/main.rs"
